Make functions more flexible

--- a/index.html
+++ b/index.html
@@ -14,21 +14,32 @@
                 <div class="output"></div>
 
                 <div class="input-container">
-                    <input type="text" id="" placeholder="First Number">
+                    <input type="text" placeholder="First Number">
                     <input type="text" placeholder="Second Number">
                 </div>
                 <button class="run-btn" id="add-btn">Add</button>
             </div>
+
             <div class="card">
                 <div class="output"></div>
     
                 <div class="input-container">
-                    <input type="text" id="" placeholder="First Number">
+                    <input type="text" placeholder="First Number">
                     <input type="text" placeholder="Second Number">
                 </div>
                 <button class="run-btn" id="subtract-btn">Subtract</button>
             </div>
-            <div class="card"></div>
+
+            <div class="card">
+                <div class="output"></div>
+    
+                <div class="input-container">
+                    <input type="text" placeholder="First Number">
+                    <input type="text" placeholder="Second Number">
+                </div>
+                <button class="run-btn" id="multiply-btn">Multiply</button>
+            </div>
+
             <div class="card"></div>
             <div class="card"></div>
         </div>
