Add combo function

--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
                 <button class="run-btn" id="multiply-btn">Multiply</button>
             </div>
 
-            <div class="card"></div>
+            <div class="card">
+                <div class="output"></div>
+    
+                <div class="input-container">
+                    <input type="text" placeholder="First Number">
+                    <input type="text" placeholder="Second Number">
+                </div>
+                <button class="run-btn" id="combo-btn">Combo</button>
+            </div>
+
             <div class="card"></div>
         </div>
     </main>
