Add concat function

--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
                 <button class="run-btn" id="combo-btn">Combo</button>
             </div>
 
-            <div class="card"></div>
+            <div class="card">
+                <div class="output"></div>
+    
+                <div class="input-container">
+                    <input type="text" placeholder="First Word">
+                    <input type="text" placeholder="Second Word">
+                </div>
+                <button class="run-btn" id="concat-btn">Concat Words</button>
+            </div>
         </div>
     </main>
     <script src="script.js"></script>
